# miptgirl_medium

./: README.md
ai_under_the_hood/: load_data_to_ch.ipynb  reflection.ipynb
analyst_agent/: agent_prototype_collaboration.ipynb  agent_prototype_v0.ipynb  functions_how_to.ipynb  generate_synthetic_data_for_sql.ipynb  sqldatabase_chain.ipynb
bertopic_for_coursera/: ml_courses_coursera_reviews_with_transl.csv
bertopic_for_hotels/: topic_modelling_hotels.ipynb
causal_inference_linear_regression/: experiment_generate_synthetic_data.ipynb  student_performance_analysis.ipynb
crewai_answering_questions/: Llama3ModelFile  llama3_setup.sh  rag_documentation_poc_llama.ipynb  rag_documentation_poc_openai.ipynb  writing_documentation_poc_llama.ipynb  writing_documentation_poc_openai.ipynb
cuttest_dogs/: app.py  cuttest_dogs_model.pkl  requirements.txt
discrete_optimisations/: discrete_optimisation.ipynb  generate_data.ipynb  marketing_campaign_estimations.csv
dspy_example/: nps_comments.json  nps_comments_with_reasoning.json  (+1 more)
nat_example/happiness_v2/: pyproject.toml
nat_example/happiness_v2/src/happiness_v2/: register.py
nat_example/happiness_v2/src/happiness_v2/configs/: config.yml
nat_example/happiness_v2/src/happiness_v2/utils/: calculator_agent.py
nat_example/happinness_v2/: pyproject.toml
nat_example/happinness_v2/src/happinness_v2/: register.py
nat_example/happinness_v2/src/happinness_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nat_example/happinness_v2/src/happinness_v2/configs/: config.yml
(+71 files in other folders)
